<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >

    <CheckedTextView
        android:id="@+id/chk_textview_wifi_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkMark="?android:attr/textCheckMark"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:textColor="@color/font_blue"
        android:text="wifi_username" />

    <LinearLayout
        android:id="@+id/layout_account_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_post_operation"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_edit"
            android:gravity="center"
            android:layout_weight="1.0"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_del"
            android:layout_weight="1.0"
            android:gravity="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_set_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/account_set_default"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>