<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_content_repeat"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/top" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_corners"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chufadi"
                android:textColor="@color/font_black" />

            <TextView
                android:id="@+id/xiaoche_detail_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kongbai"
                android:textColor="@color/font_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/bg_corners"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mudidi"
                android:textColor="@color/font_black" />

            <TextView
                android:id="@+id/xiaoche_detail_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kongbai"
                android:textColor="@color/font_black" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/bg_corners"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bancimingcheng"
                android:textColor="@color/font_black" />

            <TextView
                android:id="@+id/xiaoche_detail_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kongbai"
                android:textColor="@color/font_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/bg_corners"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chufashijian"
                android:textColor="@color/font_black" />

            <TextView
                android:id="@+id/xiaoche_detail_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kongbai"
                android:textColor="@color/font_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/bg_corners"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yunxingshijian"
                android:textColor="@color/font_black" />

            <TextView
                android:id="@+id/xiaoche_detail_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kongbai"
                android:textColor="@color/font_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/bg_corners"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/TextView08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shangchedidian"
                android:textColor="@color/font_black" />

            <TextView
                android:id="@+id/xiaoche_detail_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kongbai"
                android:textColor="@color/font_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/bg_corners"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beizhuxinxi"
                android:textColor="@color/font_black" />

            <TextView
                android:id="@+id/xiaoche_detail_remark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kongbai"
                android:textColor="@color/font_black" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>