<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_content_repeat"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include
        android:id="@+id/include1"
        layout="@layout/top_with_two_btn" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/include1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/textview_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="dummy"
            android:visibility="invisible"
            android:textColor="#FFFF00"
            android:textSize="15sp" />
                
        <TextView
            android:id="@+id/textview_wifi_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/textview_error_msg"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="dummy"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_wifi_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_wifi_state"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/font_blue"
            android:text="@string/wifi_login"
            android:textSize="20sp" />
        
       <Button
            android:id="@+id/btn_switch_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_wifi_login"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/font_blue"
            android:text="@string/switch_wifi"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_login_on_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_switch_wifi"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/login_on_connect" />
    </RelativeLayout>

</RelativeLayout>